--- a/assets/css/index-head.css
+++ b/assets/css/index-head.css
@@ -27,6 +27,9 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
+.card-bg {
+  background-color: rgba(255,255,255,0.7);
+}
 .nav-scroller {
   position: relative;
   z-index: 2;
